Add levels of difficulty

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <h1>Guess My Number!</h1>
       <p class="between">(Between 1 and 20)</p>
       <button class="btn again">Again!</button>
+      <button class="btn easy">Easy</button>
+      <button class="btn medium">Medium</button>
+      <button class="btn hard">Hard</button>
       <div class="number">?</div>
     </header>
     <main>
